Revision history for Perl extension Net::SSLeay.

??????? 2018-??-??
	- Net::SSLeay::read() now checks SSL_get_error() for
	  SSL_ERROR_ZERO_RETURN for return values <= 0 to make
	  Net::SSLeay::read() behave more like underlying OpenSSL
	  function SSL_read().
	  Convenience function ssl_read_all() now does an automatic
	  retry when ERROR_WANT_READ or ERROR_WANT_WRITE is returned
	  with Net::SSLeay::read().
	  Convenience function ssl_read_until() now uses
	  Net::SSLeay::ssl_read_all() instead of
	  Net::SSLeay::read(). Tests 07_sslecho.t and 36_verify.t were
	  also updated to use ssl_read_all() and ssl_write_all(). The
	  tests now also disable TLSv1.3 session tickets and ignore
	  SIGPIPE to avoid this signal when the client has finished
	  before server has sent session tickets and called
	  Net::SSLeay::accept().
	  Thanks to Petr Pisar and Sebastian Andrzej Siewior for the
	  patches (in #RT125218).
	- Enable OpenSSL 1.1.1-pre9 with Travis CI.
	- Add SSL_CTX_set_num_tickets, SSL_CTX_get_num_tickets,
	  SSL_set_num_ticket and SSL_get_num_tickets for controlling
	  the number of TLSv1.3 session tickets that are issued.  Add
	  tests in 44_sess.t. Parts taken from a larger patch by Petr
	  Pisar of RedHat.
	- Add SSL_CTX_set_ciphersuites and SSL_set_ciphersuites for
	  configuring the available TLSv1.3 ciphersuites. Add tests in
	  43_misc_functions.t and clarify SSL_client_version tests.
	- Add SSL_CTX_set_security_level, SSL_CTX_get_security_level,
	  SSL_set_security_level and SSL_get_security_level.
	  Add new test file 65_security_level.t.
	  All courtesy of Damyan Ivanov of Debian project.
	- Add RAND_priv_bytes. Add new test file t/local/10_rand.t for
	  RAND_bytes, RAND_pseudo_bytes, RAND_priv_bytes, RAND_status,
	  RAND_poll, RAND_file_name and RAND_load_file.
	- Update documentation for RAND_*bytes return values and
	  RAND_file_name behaviour with LibreSSL.
	- Add SSL_SESSION_is_resumable. Add and update tests in 44_sess.t.